--- a/vectordb-genai-101/chat-app-code/requirements.txt
+++ b/vectordb-genai-101/chat-app-code/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.7
 dnspython==2.6.1
 ecs-logging==2.2.0
 eland==8.15.0
+eland[pytorch]==8.15.0
 elastic-apm==6.22.3
 elastic-transport==8.13.1
 elasticsearch==8.15.0
